# Ychebnaya_Praktika123

./: .gitignore  README.md
cpp_core/: CMakeLists.txt  README.md  REPO_NOTE.md
cpp_core/apps/console/: main.cpp
cpp_core/docs/: Doxyfile  TECH_DESIGN.md
cpp_core/examples/: input_100x100.txt  input_3x3.txt  out.txt
cpp_core/matrix/include/matrix/: matrix.hpp
cpp_core/matrix/src/: det.cpp  lu.cpp  matrix.cpp  mul_naive.cpp  mul_simd_avx.cpp
cpp_core/tests/: test_basic.cpp  test_det.cpp  test_lu.cpp  test_perf.cpp
ios/: README.md
ios/MatrixSwiftDemo/MatrixSwiftDemo/: ContentView.swift  MatrixSwiftDemoApp.swift
ios/MatrixSwiftDemo/MatrixSwiftDemo.xcodeproj/: project.pbxproj
ios/MatrixSwiftDemo/MatrixSwiftDemo.xcodeproj/project.xcworkspace/xcuserdata/balenkoe.xcuserdatad/: UserInterfaceState.xcuserstate
ios/MatrixSwiftDemo/MatrixSwiftDemo.xcodeproj/xcuserdata/balenkoe.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/MatrixSwiftDemo/MatrixSwiftDemoTests/: MatrixSwiftDemoTests.swift
ios/MatrixSwiftDemo/MatrixSwiftDemoUITests/: MatrixSwiftDemoUITests.swift  MatrixSwiftDemoUITestsLaunchTests.swift
